# DDM3

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DYNAMIC_INTERPOLATION_SUMMARY.md  FEATURE_SUMMARY.md  FIBER_CONTOUR_PLOTTING.md  FIBER_NETWORK_UPDATE_SUMMARY.md  FRACTURE_EVOLUTION_WORKFLOW.md  GAUGE_LENGTH_REMOVAL_SUMMARY.md  LICENSE  PLOTTING_HANG_FIX_SUMMARY.md  PROJECT_SUMMARY.md  README.md  UPDATE_SUMMARY.md  VARIABLE_NAMES_UPDATE_SUMMARY.md  pyproject.toml  requirements.txt  setup.py  stress_coupling_test_stability_test.ipynb
backup/original_code/: ddm3d.py  stress_coupling_test_stability_test.ipynb
backup/original_code/modules/: channel.py  ddm.py  fibre.py  fracture.py
ddm3d/: __init__.py
ddm3d/calculations/: __init__.py  ddm_calculator.py
ddm3d/core/: __init__.py  element.py  fiber.py  fracture.py  material.py  plane.py
ddm3d/utils/: __init__.py  geometry.py
ddm3d/visualization/: __init__.py  plotter.py
examples/: README.md  __init__.py  basic_example.py  fracture_evolution_workflow.py  generate_evolution_plots.py  generate_mode_specific_plots.py  plot_evolution_example.py  plot_from_h5.py  test_evolution_plotting.py  test_opening_mode_base.py  utils.py
examples/mixed_mode_incline/: README.md  run_mixed_mode_incline.py
examples/mixed_mode_incline/results/mixed_mode/: mixed_mode_fiber_1.h5  mixed_mode_fiber_2.h5  mixed_mode_fiber_3.h5
examples/opening_mode_base/: README.md  run_opening_mode_base.py
examples/opening_mode_base/results/opening_mode_base/: opening_mode_base_fiber_1.h5
examples/opening_mode_incline/: README.md  run_opening_mode_incline.py
examples/opening_mode_incline/results/opening_mode/: opening_mode_fiber_1.h5  opening_mode_fiber_2.h5  opening_mode_fiber_3.h5
examples/results/opening_mode_base_test/: opening_mode_base_test_fiber_2.h5  opening_mode_base_test_fiber_3.h5
examples/shear_mode_incline/: README.md  run_shear_mode_incline.py
examples/shear_mode_incline/results/shear_mode/: shear_mode_fiber_1.h5  shear_mode_fiber_2.h5  shear_mode_fiber_3.h5
modules/: element.py
tests/: __init__.py  test_basic.py
